--- a/client/views/home.html
+++ b/client/views/home.html
@@ -2,6 +2,7 @@
     <div class="row">
         <div class="col-md-12">
             Home
+            <a href="#aaa" data-id="123123123">ABED</a>
         </div>
     </div>
 </template>
