update all information

--- a/client/views/home.html
+++ b/client/views/home.html
@@ -1,8 +1,7 @@
 <template name="home">
     <div class="row">
         <div class="col-md-12">
-            Home
-            <a href="#aaa" data-id="123123123">ABED</a>
+            <button type="button" class="btn btn-danger" id="btnUpdateAll" {{disabledButton}}><i class="fa fa-hand-peace-o"></i> Update All Information</button>
         </div>
     </div>
 </template>
