--- a/client/views/layout.html
+++ b/client/views/layout.html
@@ -1,6 +1,7 @@
 <template name="defaultLayout">
     {{> Template.dynamic template=top}}
     <div class="container">
+        {{> flashMessages}}
         {{> Template.dynamic template=main}}
     </div>
 </template>
