--- a/client/views/home.html
+++ b/client/views/home.html
@@ -2,6 +2,7 @@
     <div class="row">
         <div class="col-md-12">
             <button type="button" class="btn btn-danger" id="btnUpdateAll" {{disabledButton}}><i class="fa fa-hand-peace-o"></i> Update All Information</button>
+            <button type="button" class="btn btn-info" id="btnFollowFromFollowers" {{disabledButton}}><i class="fa fa-hand-rock-o"></i> Follow Followers</button>
         </div>
     </div>
 </template>
