--- a/client/views/jobs.html
+++ b/client/views/jobs.html
@@ -1,7 +1,70 @@
 <template name="jobs">
     <div class="row">
         <div class="col-md-12">
-            JOBS
+            <div class="table-responsive">
+                <table class="table">
+                    {{#if subsReady 'total_gifs_completed' 'total_gifs' 'total_movies'}}
+                    <caption><h3>Gifs : {{getPublishedCount 'total_gifs_completed'}}/{{getPublishedCount 'total_gifs'}}, Movies : {{getPublishedCount 'total_movies'}}</h3></caption>
+                    {{else}}
+                    <caption>Loading...</caption>
+                    {{/if}}
+                    <thead>
+                        <tr>
+                            <th>Type</th>
+                            <th>Total</th>
+                            <th>Ready</th>
+                            <th>Running</th>
+                            <th>Completed</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {{#if subsReady 'total_jobs_step1' 'total_jobs_step1_ready' 'total_jobs_step1_running' 'total_jobs_step1_completed'}}
+                        <tr>
+                            <td>PH Step 1</td>
+                            <td>{{getPublishedCount 'total_jobs_step1'}}</td>
+                            <td>{{getPublishedCount 'total_jobs_step1_ready'}}</td>
+                            <td>{{getPublishedCount 'total_jobs_step1_running'}}</td>
+                            <td>{{getPublishedCount 'total_jobs_step1_completed'}}</td>
+                        </tr>
+
+                        {{else}}
+                        <tr>
+                            <td colspan="5">Loading...</td>
+                        </tr>
+                        {{/if}}
+
+                        {{#if subsReady 'total_jobs_step2' 'total_jobs_step2_ready' 'total_jobs_step2_running' 'total_jobs_step2_completed'}}
+                            <tr>
+                                <td>PH Step 2</td>
+                                <td>{{getPublishedCount 'total_jobs_step2'}}</td>
+                                <td>{{getPublishedCount 'total_jobs_step2_ready'}}</td>
+                                <td>{{getPublishedCount 'total_jobs_step2_running'}}</td>
+                                <td>{{getPublishedCount 'total_jobs_step2_completed'}}</td>
+                            </tr>
+
+                        {{else}}
+                            <tr>
+                                <td colspan="5">Loading...</td>
+                            </tr>
+                        {{/if}}
+
+                        {{#if subsReady 'total_jobs_tags' 'total_jobs_tags_ready' 'total_jobs_tags_running' 'total_jobs_tags_completed'}}
+                            <tr>
+                                <td>PH Step Tags</td>
+                                <td>{{getPublishedCount 'total_jobs_tags'}}</td>
+                                <td>{{getPublishedCount 'total_jobs_tags_ready'}}</td>
+                                <td>{{getPublishedCount 'total_jobs_tags_running'}}</td>
+                                <td>{{getPublishedCount 'total_jobs_tags_completed'}}</td>
+                            </tr>
+
+                        {{else}}
+                            <tr>
+                                <td colspan="5">Loading...</td>
+                            </tr>
+                        {{/if}}
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 </template>
