--- a/client/views/nav.html
+++ b/client/views/nav.html
@@ -15,8 +15,8 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="{{pathFor 'home'}}">Dashboard <span class="sr-only">(current)</span></a></li>
-                    <li><a href="#">Link</a></li>
+                    <li class="{{isActiveRoute 'home'}}"><a href="{{pathFor 'home'}}">Dashboard <span class="sr-only">(current)</span></a></li>
+                    <li class="{{isActiveRoute 'jobs'}}"><a href="{{pathFor 'jobs'}}">Jobs</a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
