--- a/client/views/nav.html
+++ b/client/views/nav.html
@@ -17,6 +17,7 @@
                 <ul class="nav navbar-nav">
                     <li class="{{isActiveRoute 'home'}}"><a href="{{pathFor 'home'}}">Dashboard <span class="sr-only">(current)</span></a></li>
                     <li class="{{isActiveRoute 'jobs'}}"><a href="{{pathFor 'jobs'}}">Jobs</a></li>
+                    <li class="{{isActiveRoute 'xtube'}}"><a href="{{pathFor 'xtube'}}">Gays</a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
