--- a/client/views/xtube.html
+++ b/client/views/xtube.html
@@ -19,5 +19,6 @@
 </template>
 
 <template name="gay_controls">
-    <button class="btn btn-default btn-download">Download</button>
+    <button class="btn btn-default btn-download">Download</button> &nbsp;
+    <button class="btn btn-primary btn-watermark">Add WaterMark</button> &nbsp;
 </template>
