--- a/client/views/xtube.html
+++ b/client/views/xtube.html
@@ -20,6 +20,11 @@
     </div>
     <div class="row section">
         <div class="col-md-12">
+
+        </div>
+    </div>
+    <div class="row section">
+        <div class="col-md-12">
             {{> reactiveTable collection=collection fields=fields settings=settings}}
         </div>
     </div>
