--- a/client/views/xtube.html
+++ b/client/views/xtube.html
@@ -10,6 +10,7 @@
                         <ul class="dropdown-menu">
                             <li><a href="#" class="btn-xtube">Xtube</a></li>
                             <li><a href="#" class="btn-redtube">Redtube</a></li>
+                            <li><a href="#" class="btn-porncom">Porn.com</a></li>
                         </ul>
                     </div>
                 </span>
@@ -37,6 +38,7 @@
         <ul class="dropdown-menu">
             <li><a href="#" class="btn-download">Download</a></li>
             <li class="divider"></li>
+            <li><a href="#" class="btn-detail">Detail</a></li>
             <li><a href="#" class="btn-reGetInfo">Re Fetch</a></li>
             <li class="divider"></li>
             <li><a href="#" class="btn-watermark-1">Watermark malecams</a></li>
@@ -44,4 +46,52 @@
             <li><a href="#" class="btn-watermark-3">Watermark desixxx</a></li>
         </ul>
     </div>
+</template>
+
+<template name="modal_detail">
+    <div class="modal fade" id="{{videoId}}">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title">Clip Detail</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <input class="form-control" type="text" placeholder="{{title}}" value="{{title}}" disabled>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <textarea class="form-control" name="description" id="description" cols="30" rows="5" disabled>{{description}}</textarea>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <textarea class="form-control" name="tags" id="tags" cols="30" rows="5" disabled>{{tags}}</textarea>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <input type="text" disabled class="form-control" value="{{download}}"/>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <input type="text" disabled class="form-control" value="{{savedPath}}"/>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <input type="text" disabled class="form-control" value="{{watermarkedPath}}"/>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
 </template>
