--- a/client/views/xtube.html
+++ b/client/views/xtube.html
@@ -90,6 +90,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-warning" data-dismiss="modal">Uploaded</button>
                 </div>
             </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
