--- a/client/views/xtube.html
+++ b/client/views/xtube.html
@@ -11,6 +11,7 @@
                             <li><a href="#" class="btn-xtube">Xtube</a></li>
                             <li><a href="#" class="btn-redtube">Redtube</a></li>
                             <li><a href="#" class="btn-porncom">Porn.com</a></li>
+                            <li><a href="#" class="btn-xhamster">Xhamster</a></li>
                         </ul>
                     </div>
                 </span>
