--- a/client/views/xtube.html
+++ b/client/views/xtube.html
@@ -12,6 +12,7 @@
                             <li><a href="#" class="btn-redtube">Redtube</a></li>
                             <li><a href="#" class="btn-porncom">Porn.com</a></li>
                             <li><a href="#" class="btn-xhamster">Xhamster</a></li>
+                            <li><a href="#" class="btn-cliphunter">ClipHunter</a></li>
                         </ul>
                     </div>
                 </span>
@@ -71,6 +72,11 @@
                     <div class="row">
                         <div class="col-sm-12">
                             <textarea class="form-control" name="tags" id="tags" cols="30" rows="5" disabled>{{tags}}</textarea>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <input type="text" disabled class="form-control" value="{{url}}"/>
                         </div>
                     </div>
                     <div class="row">
