--- a/client/views/nav.html
+++ b/client/views/nav.html
@@ -18,6 +18,7 @@
                     <li class="{{isActiveRoute 'home'}}"><a href="{{pathFor 'home'}}">Dashboard <span class="sr-only">(current)</span></a></li>
                     <li class="{{isActiveRoute 'jobs'}}"><a href="{{pathFor 'jobs'}}">Jobs</a></li>
                     <li class="{{isActiveRoute 'xtube'}}"><a href="{{pathFor 'xtube'}}">Full</a></li>
+                    <li class="{{isActiveRoute 'grab'}}"><a href="{{pathFor 'grab'}}">Grab Tube</a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
