--- a/client/views/grab.html
+++ b/client/views/grab.html
@@ -14,6 +14,9 @@
         <div class="col-md-1">
             <input type="number" class="form-control" {{b "value : Page"}}/>
         </div>
+        <div class="col-md-1">
+            <button class="btn btn-default" {{b "click : ClearAll"}}>Clear All</button>
+        </div>
     </div>
     <div class="row">
         {{#each TubeSites}}
