--- a/client/views/grab.html
+++ b/client/views/grab.html
@@ -61,7 +61,7 @@
 <template name="grabTube_item">
     <tr>
         <td><strong>{{source}}</strong></td>
-        <td><img alt="{{title}}" src="{{thumbnail}}"/></td>
+        <td><a href="{{href}}" target="_blank"><img alt="{{title}}" src="{{thumbnail}}"/></a></td>
         <td><span>{{title}}</span></td>
     </tr>
 </template>
